# ac-installer-gui

./: README.md  package.json  pnpm-lock.yaml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  install.rs  lib.rs  main.rs
src/routes/: +layout.svelte  +page.svelte  Titlebar.svelte
