[package]
name = "ac-installer-gui"
version = "0.1.0"
description = "A Graphical User Insterface installer for AutoCrate"
authors = ["Sharma.devanshu089"]
edition = "2021"

[lib]
name = "ac_installer_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
